Code modularization in VScode

--- a/wordle.ipynb
+++ b/wordle.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = './data/words_frequency.txt'"
+    "file_path = './src/data/words_frequency.txt'"
    ]
   },
   {
